
2007-07-28  Chris Morley

	Various xml, xsl, etc file. Display of output file has energy level
	diagram  and collapsable data sections.
	
2007-07-28  Chris Morley
	
	* src/MicroRate.cpp, .h, src/SimpleILTx.cpp, src/SimpleRRKMx.cpp:
	Mod of MicroRateCalulator classes to be plugin classes and to keep 
	all their data in the Reaction class.
	
	* src/Molecule.h, .cpp: Remove diagCollisionOperator which is also
	in ReactionManager
	
	* Persistence.h, XMLPersist.h,.cpp:Add ReadBoolean() and WriteAttribute
	methods. Activate Read() and modify WriteMainElement(). More flexibilty
	found to be necessary.
	
	* src.System.h,.cpp:Add ReadRange() method and use it for T, P and conc.
	Not yet used properly in calculation.

2007-07-21  Struan Robertson

        * src/MicroRateCalculator.cpp/.h: Separated micro-rate calcuator base
        class into separate file and added test method to this class.

        * src/SimpleILT.cpp/.h: Added implementation of simple dissociation ILT 
        method.

2007-07-09  Struan Robertson

        * src/Reaction.cpp/.h: Separated micro-rate calcuation code into
        calculator classes.

        * src/SimpleRRKM.cpp/.h and SimpleILT.ccp/.h calculator classes added to
        calculate micro. rate coeffs. via RKKM and ILT respectively.

2007-06-12  Struan Robertson

        * src/Reaction.cpp/.h: Isomer reaction terms reviewed and simplified,
        unnecessary methods and variables removed.

2007-06-10  Struan Robertson

	* src/ReactionManager.cpp:  Altered to invoke reaction objects to add details
        of reaction to collision operator.

        * src/Reaction.cpp/.h: altered to include detailed balancing and others
        methods for adding isomer reaction terms to the collision operator

        * Minor changes to System and Molecule classes to support the above
        changes.
        
        * Update of Linux Makefile.

2007-06-07  Chris Morley

	* src/Molecule.h: Remove MAXCELL and MAXGRN and (unused)