@@ -1,3 +1,7 @@
+2007-08-08  Chris Morley
+
+	Add the error handling files oberror.h and oberror.cpp. These are
+	slightly modified OpenBabel files. Not yet used in Mesmer code.
 
 2007-07-28  Chris Morley
 
